Update StockView
